2005-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* assembly.c (mono_assembly_load_reference): Fix warning.

2005-05-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threadpool.c: changed the default number of threads per cpu. From now
	on, the default will be 20 + (5 * number of cpus) instead of 50.

2005-05-04  Zoltan Varga  <vargaz@freemail.hu>

	* loader.c (mono_method_get_signature_full): Add locking here.

2005-05-03  Lluis Sanchez Gual <lluis@novell.com>

	* appdomain.c: Moved methods for parsing and freeing assembly
	names to assembly.c.
	* assembly.c, domain-internals.h: Created public methods for parsing
	assembly names. Fixed mono_assembly_load_with_partial_name:
	it now finds the best match, taking into account the version,
	token and culture specified in the partial name. Also return
	the latest version if no version information is specified.

Mon May 2 15:47:57 CEST 2005 Paolo Molaro <lupus@ximian.com>

	* threadpool.c: replace check for SocketAsyncCall class.

2005-05-02 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threadpool-internals.h:
	* Makefile.am: added threadpool-internals.h

	* threadpool.c: call mono_unhandled_exception on exceptions not handled
	that happen in threadpool threads (tested on MS).
	(mono_thread_pool_remove_socket): new function that dispatch any pending
	AIO call on a socket that is closing. By now only epoll really needs it,
	as select/poll wake up when the socket closes.


	* socket-io.c: call mono_thread_pool_remove_socket in Close_internal.

2005-05-01  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c (mono_marshal_get_managed_wrapper): Handle changing the calling convention.

2005-05-01  Lluis Sanchez Gual  <lluis@novell.com>

	* gc.c: In mono_gc_cleanup(), wait for 2 seconds, not 2000 seconds.

2005-04-30  Lluis Sanchez Gual  <lluis@novell.com>

	* threads.c: In mono_thread_suspend_all_other_threads, if a thread
	has an abort request, convert it into a suspend request.

2005-04-30  Ben Maurer  <bmaurer@ximian.com>