@@ -18,7 +18,7 @@
 static guint32 debugger_lock_level = 0;
 static CRITICAL_SECTION debugger_lock_mutex;
 static gboolean must_reload_symtabs = FALSE;
-static gboolean mono_debugger_initialized = FALSE;
+static gboolean mono_debugger_use_debugger = FALSE;
 static MonoObject *last_exception = NULL;
 
 struct _MonoDebuggerMetadataInfo {
@@ -68,11 +68,6 @@ MonoDebuggerIOLayer mono_debugger_io_layer = {
 void
 mono_debugger_lock (void)
 {
-	if (!mono_debugger_initialized) {
-		debugger_lock_level++;
-		return;
-	}
-
 	EnterCriticalSection (&debugger_lock_mutex);
 	debugger_lock_level++;
 }
@@ -82,13 +77,8 @@ mono_debugger_unlock (void)
 {
 	g_assert (debugger_lock_level > 0);
 
-	if (!mono_debugger_initialized) {
-		debugger_lock_level--;
-		return;
-	}
-
 	if (debugger_lock_level == 1) {
-		if (must_reload_symtabs) {
+		if (must_reload_symtabs && mono_debugger_use_debugger) {
 			mono_debugger_event (MONO_DEBUGGER_EVENT_RELOAD_SYMTABS, 0, 0);
 			must_reload_symtabs = FALSE;
 		}
@@ -99,20 +89,20 @@ mono_debugger_unlock (void)
 }
 
 void
-mono_debugger_initialize (void)
+mono_debugger_initialize (gboolean use_debugger)
 {
 	MONO_GC_REGISTER_ROOT (last_exception);
 	
-	g_assert (!mono_debugger_initialized);
+	g_assert (!mono_debugger_use_debugger);
 
 	InitializeCriticalSection (&debugger_lock_mutex);
-	mono_debugger_initialized = TRUE;
+	mono_debugger_use_debugger = use_debugger;
 }
 
 void
 mono_debugger_add_symbol_file (MonoDebugHandle *handle)
 {
-	g_assert (mono_debugger_initialized);
+	g_assert (mono_debugger_use_debugger);
 
 	mono_debugger_lock ();
 	mono_debugger_event (MONO_DEBUGGER_EVENT_ADD_MODULE, GPOINTER_TO_UINT (handle), 0);
@@ -313,7 +303,7 @@ mono_debugger_breakpoint_callback (MonoMethod *method, guint32 index)
 gboolean
 mono_debugger_unhandled_exception (gpointer addr, gpointer stack, MonoObject *exc)
 {
-	if (!mono_debugger_initialized)
+	if (!mono_debugger_use_debugger)
 		return FALSE;
 
 	// Prevent the object from being finalized.
@@ -328,7 +318,7 @@ mono_debugger_handle_exception (gpointer addr, gpointer stack, MonoObject *exc)
 {
 	MonoDebuggerExceptionInfo info;
 
-	if (!mono_debugger_initialized)
+	if (!mono_debugger_use_debugger)
 		return;
 
 	// Prevent the object from being finalized.
@@ -347,7 +337,7 @@ mono_debugger_throw_exception (gpointer addr, gpointer stack, MonoObject *exc)
 {
 	MonoDebuggerExceptionInfo info;
 
-	if (!mono_debugger_initialized)
+	if (!mono_debugger_use_debugger)
 		return FALSE;
 
 	// Prevent the object from being finalized.
